[package]
name = "wordler"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Library and cli for Wordle"
keywords = ["wordle", "game", "dictionary"]
repository = "https://github.com/64bit/wordle-rs"
homepage = "https://docs.rs/wordler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
rand = "0.8.5"
indexmap = "1.9.2"
ansi_term = "0.12.1"

[[bin]]
name = "wordler"
path = "src/bin/game.rs"
